Add credits to user
